# bare-server-rs

./: .gitignore  COPYING  Cargo.toml  README.md
src/: lib.rs
src/cow/: bare_errors.rs  mod.rs  parse_headers.rs  serve.rs  websocket_protocol.rs
src/docs/: configure.md
testing/: index.js  package-lock.json  package.json  test_ssl.js
