[package]
name = "bare_server_rs"
version = "0.1.0"
authors = ["Hollister <cowingtonpost@gmail.com>"]
edition = "2022"
license = "AGPL-3.0"
keywords = ["proxy", "tomphttp"]
categories = ["command-line-utilities"]
description = "A TompHTTP Bare server V1 Written in Rust."
homepage = "https://github.com/cowingtonpost1/bare-server-rs"
repository = "https://github.com/cowingtonpost1/bare-server-rs"
readme = "README.md"

[lib]
name = "bare_server_rs"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
actix-web = "4"
actix-http = "3.3.0"
tokio = { version = "1", features = ["full"] }
actix = "0.13.0"
actix-rt = "2" # <-- Runtime for actix
actix-web-actors = "4.2.0"
futures = "0.3.26"
http = "0.2.9"
awc = { version = "3.1.0", features = ["default", "rustls", "openssl"] }
actix-files = "0.6.2"
rustls = "0.20.8"
rand = "0.8.5"
